--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -27,36 +27,93 @@
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
-            <img src="./assets/lena-polishko (1).jpg" alt="" />
-            <img src="./assets/lena-polishko (2).jpg" alt="" />
-            <img src="./assets/lena-polishko (3).jpg" alt="" />
-            <img
-              src="./assets/lena-polishko (4).jpg"
-              alt=""
-              class="fullWidth" />
-            <iframe
-              src="https://player.vimeo.com/video/486511696?h=f085ab9a94&autoplay=1&loop=1&muted=1"
-              width="640"
-              height="360"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
-            <iframe
-              src="https://player.vimeo.com/video/118919656?h=ce35fd4077&autoplay=1&loop=1&muted=1"
-              style="aspect-ratio: 640 / 360"
-              width="100%"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
-            <iframe
-              class="youtube"
-              style="aspect-ratio: 560 / 315"
-              width="100%"
-              src="https://www.youtube.com/embed/pBy1zgt0XPc"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+            <div style="padding: 56.25% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/860619613?h=0b86570b26&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_1.jpg" alt="" />
+            <img src="./assets/typo_2.jpg" alt="" />
+            <img src="./assets/typo_3.jpg" alt="" />
+            <img src="./assets/typo_4.jpg" alt="" />
+            <img src="./assets/typo_5.jpg" alt="" />
+            <img src="./assets/typo_6.jpg" alt="" />
+            <div style="padding: 28.47% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/860632869?h=c6f6f97c9a&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <div style="padding: 100% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/860600442?h=433ae62957&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_7.jpg" alt="" />
+            <img src="./assets/typo_8.jpg" alt="" />
+            <div style="padding: 100% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/860623400?h=96f007c1fd&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_9.jpg" alt="" />
+            <img src="./assets/typo_10.jpg" alt="" />
+            <div style="padding: 100% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/860627854?h=a4a0918243&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_11.jpg" alt="" />
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
