1차 심사 최종,,

--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -31,6 +31,7 @@
             <img src="./assets/illust_2.jpg" alt="" />
             <img src="./assets/illust_3.jpg" alt="" />
             <img src="./assets/illust_4.jpg" alt="" />
+            <img src="./assets/illust_4_.jpg" alt="" />
             <img src="./assets/illust_5.jpg" alt="" />
             <img src="./assets/illust_6.jpg" alt="" />
             <img src="./assets/illust_6_.jpg" alt="" />
