--- a/src/subject1/subject1.html
+++ b/src/subject1/subject1.html
@@ -29,19 +29,45 @@
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <img src="./assets/package_1.jpg" alt="" />
             <img src="./assets/package_2.jpg" alt="" />
+            <img src="./assets/package_0.jpg" alt="" />
             <img src="./assets/package_3.jpg" alt="" />
             <img src="./assets/package_4.jpg" alt="" />
+            <img src="./assets/package_0.jpg" alt="" />
+            <img src="./assets/package_5_0.jpg" alt="" />
             <img src="./assets/package_5.jpg" alt="" />
+            <img src="./assets/package_0.jpg" alt="" />
             <img src="./assets/package_6.jpg" alt="" />
             <img src="./assets/package_7.jpg" alt="" />
+            <img src="./assets/package_0.jpg" alt="" />
             <img src="./assets/package_8.jpg" alt="" />
             <img src="./assets/package_9.jpg" alt="" />
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+            <lottie-player
+              src="https://lottie.host/991780f5-2456-4422-b4f8-f46d97772b83/dbwHWc96is.json"
+              style="aspect-ratio: 1440 / 860; width: 100%"
+              background="transparent"
+              speed="1"
+              loop
+              autoplay></lottie-player>
             <img src="./assets/package_10.jpg" alt="" />
             <img src="./assets/package_11.jpg" alt="" />
             <img src="./assets/package_12.jpg" alt="" />
-            <img src="./assets/package_13.jpg" alt="" />
-            <img src="./assets/package_14.jpg" alt="" />
-            <img src="./assets/package_15.jpg" alt="" />
+            <div style="padding: 138.19% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/868344052?h=086f2829d9&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
             <img src="./assets/package_16.jpg" alt="" />
             <img src="./assets/package_17.jpg" alt="" />
             <img src="./assets/package_18.jpg" alt="" />
@@ -57,11 +83,23 @@
             <img src="./assets/package_28.jpg" alt="" />
             <img src="./assets/package_29.jpg" alt="" />
             <img src="./assets/package_30.jpg" alt="" />
+            <img src="./assets/package_0.jpg" alt="" />
             <img src="./assets/package_31.jpg" alt="" />
             <img src="./assets/package_32.jpg" alt="" />
             <img src="./assets/package_33.jpg" alt="" />
             <img src="./assets/package_34.jpg" alt="" />
             <img src="./assets/package_35.jpg" alt="" />
+            <script
+              src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+              type="module"></script>
+
+            <dotlottie-player
+              src="https://lottie.host/be148843-dd24-4f09-ac5e-5055d94fbd35/hAXfXEtZIp.json"
+              style="aspect-ratio: 1440 / 810; width: 100%"
+              background="transparent"
+              speed="1"
+              loop
+              autoplay></dotlottie-player>
             <img src="./assets/package_36.jpg" alt="" />
             <img src="./assets/package_37.jpg" alt="" />
             <img src="./assets/package_38.jpg" alt="" />
