--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -29,7 +29,7 @@
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <div style="padding: 56.25% 0 0 0; position: relative">
               <iframe
-                src="https://player.vimeo.com/video/860755551?h=ae550375f9&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                src="https://player.vimeo.com/video/867762237?h=51ede8f242&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
                 style="
                   position: absolute;
                   top: 0;
@@ -41,66 +41,54 @@
                 allow="autoplay; fullscreen; picture-in-picture"
                 allowfullscreen></iframe>
             </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
             <script src="https://player.vimeo.com/api/player.js"></script>
             <img src="./assets/typo_1.jpg" alt="" />
             <img src="./assets/typo_2.jpg" alt="" />
             <img src="./assets/typo_3.jpg" alt="" />
             <img src="./assets/typo_4.jpg" alt="" />
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+            <lottie-player
+              src="https://lottie.host/2999969f-76fa-436d-828d-e701428d395f/tcs8ZXvQYa.json"
+              background="transparent"
+              speed="1"
+              style="width: 1440px; height: 810px"
+              loop
+              autoplay></lottie-player>
             <img src="./assets/typo_5.jpg" alt="" />
             <img src="./assets/typo_6.jpg" alt="" />
-            <div style="padding: 126.39% 0 0 0; position: relative">
-              <iframe
-                src="https://player.vimeo.com/video/862822531?h=de5ff58574&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  width: 100%;
-                  height: 100%;
-                "
-                frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                allowfullscreen></iframe>
-            </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
-            <div style="padding: 100% 0 0 0; position: relative">
-              <iframe
-                src="https://player.vimeo.com/video/860600442?h=433ae62957&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  width: 100%;
-                  height: 100%;
-                "
-                frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                allowfullscreen></iframe>
-            </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_6_1.jpg" alt="" />
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+            <lottie-player
+              src="https://lottie.host/658a6f55-dd14-452b-b4b0-aa779ed089ee/MdvT2NKWlc.json"
+              background="transparent"
+              speed="1"
+              style="width: 1440px; height: 810px"
+              loop
+              autoplay></lottie-player>
             <img src="./assets/typo_7.jpg" alt="" />
+            <div style="padding: 56.25% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/865420505?h=e25e220e58&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+            <script src="https://player.vimeo.com/api/player.js"></script>
             <img src="./assets/typo_8.jpg" alt="" />
-            <div style="padding: 100% 0 0 0; position: relative">
-              <iframe
-                src="https://player.vimeo.com/video/860755508?h=0647250a84&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  width: 100%;
-                  height: 100%;
-                "
-                frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                allowfullscreen></iframe>
-            </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
             <img src="./assets/typo_9.jpg" alt="" />
-            <img src="./assets/typo_10.jpg" alt="" />
-            <div style="padding: 100% 0 0 0; position: relative">
+            <div style="padding: 56.25% 0 0 0; position: relative">
               <iframe
-                src="https://player.vimeo.com/video/860757498?h=a2dc665340&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                src="https://player.vimeo.com/video/865421540?h=970bf5feff&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
                 style="
                   position: absolute;
                   top: 0;
@@ -113,9 +101,28 @@
                 allowfullscreen></iframe>
             </div>
             <script src="https://player.vimeo.com/api/player.js"></script>
+            <img src="./assets/typo_10.jpg" alt="" />
             <img src="./assets/typo_11.jpg" alt="" />
+            <div style="padding: 56.25% 0 0 0; position: relative">
+              <iframe
+                src="https://player.vimeo.com/video/865422805?h=64f9725cbb&autoplay=1&loop=1&title=0&byline=0&portrait=0&background=1"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
             <img src="./assets/typo_12.jpg" alt="" />
             <img src="./assets/typo_13.jpg" alt="" />
+            <img src="./assets/typo_14.jpg" alt="" />
+            <img src="./assets/typo_15.jpg" alt="" />
+            <img src="./assets/typo_16.jpg" alt="" />
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
